crates/zdk-cli/tests/snapshots/auth_cli__auth_login_help.snap
---
source: crates/zdk-cli/tests/auth_cli.rs
expression: "String::from_utf8_lossy(&login.stdout)"
---
Log in: browser + PKCE (default), --client-credentials (CI) or --api-token (legacy)

Usage: zdk auth login [OPTIONS]

Options:
      --client-credentials
          Client-credentials grant (confidential client for CI/automation; no refresh token)

      --api-token
          Legacy API token (deprecated: no new tokens after 27 Oct 2026, all stop on 30 Apr 2027)

      --no-browser
          Print the authorize URL and read the code (or the redirect URL) from stdin

      --port <PORT>
          Loopback port for the browser redirect (default: ephemeral; 8484 with --no-browser)

      --redirect-uri <URI>
          Registered redirect URI for a paste-from-address-bar flow, e.g. https://localhost

      --client-id <ID>
          OAuth client identifier (default: ZENDESK_CLIENT_ID or the profile's client_id)

      --client-secret <SECRET>
          OAuth client secret (default: ZENDESK_CLIENT_SECRET); required for --client-credentials

      --email <EMAIL>
          Agent email for --api-token (default: ZENDESK_EMAIL or the profile's email)

      --token <TOKEN>
          The API token for --api-token (default: ZENDESK_API_TOKEN)

      --scopes <A,B>
          Scopes to request, comma-separated (default: the profile's scopes, else --preset agent)

      --preset <NAME>
          Scope preset: agent, admin, readonly, exporter (repeatable; combined with --scopes)

      --expires-in <SECS>
          Requested access-token lifetime in seconds (300–172800)

      --store-secret
          Keep the client secret in the credential store so client-credentials tokens re-mint
          without ZENDESK_CLIENT_SECRET

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global options:
  -p, --profile <NAME>
          Profile (Zendesk instance) to target
          
          [env: ZENDESK_PROFILE=]

      --subdomain <SUB>
          Override the subdomain for this call (the `acme` in acme.zendesk.com)

  -o, --output <FORMAT>
          Output format (default: table on a terminal, json when piped)
          
          [possible values: table, json, ndjson, csv, tsv, yaml, raw]

      --fields <A,B,C>
          Keep only these fields (dot paths, comma-separated), e.g. id,subject,assignee.name

      --exclude <A,B>
          Drop these fields (dot paths, comma-separated)

      --compact
          Single-line JSON

      --jq <EXPR>
          Post-process with an embedded jq-compatible filter

      --all
          Auto-paginate to completion

      --limit <N>
          Stop after N records

      --page-size <N>
          Records per page (1-100)

      --sideload <A,B>
          Request sideloads, e.g. users,groups,comment_count

      --dry-run
          Print the request that would be sent and consume no quota

  -y, --yes
          Skip destructive-action confirmation

      --idempotency-key <KEY>
          Explicit Idempotency-Key for writes (auto-generated by default)

      --rate-limit-strategy <STRATEGY>
          What to do when a rate-limit budget is exhausted

          Possible values:
          - wait:  Sleep until the budget refills (default)
          - fail:  Exit 7 as soon as a budget is exhausted
          - burst: Skip the local governor; rely on 429 handling

      --max-concurrency <N>
          In-flight request ceiling

      --timeout <SECS>
          Per-request timeout in seconds

      --retries <N>
          Maximum attempts per request (overrides [retry].max_attempts)

  -q, --quiet
          Suppress non-error output on stderr (warnings, progress)

  -v, --verbose...
          Increase verbosity (-v info, -vv debug, -vvv trace with redacted request/response logs)

      --no-color
          Disable colour (NO_COLOR is also honoured)

      --audit-log <PATH>
          Append a structured NDJSON record of every API call to this file

      --config <PATH>
          Alternative config file (also ZENDESK_CONFIG)

      --credential-store <STORE>
          Where credentials are kept

          Possible values:
          - auto:    OS keyring when available, else the encrypted file
          - keyring
          - file
          - env:     Read-only: ZENDESK_ACCESS_TOKEN / ZENDESK_EMAIL + ZENDESK_API_TOKEN
          - none:    In-memory only (tests)

      --checkpoint <PATH>
          Write pagination progress to this file and resume from it

The subdomain comes from the global --subdomain flag, ZENDESK_SUBDOMAIN or the profile.

Examples:
  zdk auth login                                  # browser + PKCE with the profile's client
  zdk auth login --subdomain acme --client-id zdk_local --preset agent
  zdk auth login --no-browser                     # SSH / containers: paste the code back
  zdk auth login --client-credentials --client-id zdk_ci --client-secret "$SECRET" \
      --scopes tickets:read,users:read           # CI: confidential client, no refresh token
  zdk auth login --api-token --email me@acme.com --token "$ZENDESK_API_TOKEN"   # deprecated
